# STM32F3DISCOVERY

./: .cproject  .gitignore  .mxproject  .project  Makefile.am  README  STM32F3DISCOVERY Debug new.launch  STM32F3DISCOVERY Debug old.launch  STM32F3DISCOVERY.elf.launch  STM32F3DISCOVERY.ioc  configure.ac
Inc/: adc.h  crc.h  dac.h  iwdg.h  mxconstants.h  stm32f3xx_hal_conf.h  usbd_cdc_if.h  wwdg.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Src/: adc.c  command.c  command.h  crc.c  dac.c  flash.c  flash.h  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_TIM.c  stm32f3xx_it.c  usbQueue.h  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c  wwdg.c
scripts/: build.sh  demo.sh  flash.sh
